--- a/public/index.html
+++ b/public/index.html
@@ -17,45 +17,101 @@
     <script defer src="/__/firebase/10.13.2/firebase-analytics-compat.js"></script>
     <script defer src="/__/firebase/10.13.2/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/10.13.2/firebase-performance-compat.js"></script>
-
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="js/jquery-3.6.0.min.js"></script>
     <script defer src="js/global.js"></script>
-<!--
-  initialize the SDK after all desired features are loaded, set useEmulator to false
-  to avoid connecting the SDK to running emulators.
--->
+    <!--
+      initialize the SDK after all desired features are loaded, set useEmulator to false
+      to avoid connecting the SDK to running emulators.
+    -->
 <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 <link rel="stylesheet" href="css/bootstrap-5.3.3.min.css">
 <link rel="stylesheet" href="css/style.css">
-
-
 </head>
-  <body>
-   <div id="user-info" class="text-end p-1 row">
-    <div class="col"><span id="user-status">Loading...</span></div>
-    <div class="col-1"><button id="login-button" style="display: none;">Login</button><button id="logout-button" style="display: none;">Logout</button></div>
-   </div>
+    <body>
+        <div id="user-info" class="text-end p-1 row">
+            <div class="col"><span id="user-status">Loading...</span></div>
+            <div class="col-auto">
+                 <div class="d-flex justify-content-center">
+                    <!-- Google Sign-In Button -->
+                    <button id="login-google-button" class="btn btn-danger me-3 btn-sm">
+                      <i class="fab fa-google"></i> Login with Google
+                    </button>
+                    <!-- Email/Password Sign-In Button -->
+                    <button id="login-userpass-button" class="btn btn-primary me-3 btn-sm">
+                      <i class="fas fa-user"></i> Login with Username/Password
+                    </button>
 
-
-
+                    <!-- Logout Button -->
+                    <button id="logout-button" class="btn btn-secondary btn-sm">
+                      <i class="fas fa-sign-out-alt"></i> Logout
+                    </button>
+                  </div>
+            </div>
+        </div>
+        <div class="media p-3" style="height:200px;">
+            <img class="img-fluid mw-100" src="assets/ft_wall.JPG"  alt="Forrest Trails" style='border-width: 0px;height: 150px;'>
+        </div>
+        <!-- vvv NAVBAR vvv -->
+       <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a id="home" class="nav-link" href="javascript:void(0);">Home</a>
+        </li>
+        <li class="nav-item">
+          <a id="announcements" class="nav-link" href="javascript:void(0);">Announcements</a>
+        </li>
+        <li class="nav-item">
+          <a id="documents" class="nav-link" href="javascript:void(0);">Documents</a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="media p-3" style="height:200px;">
-        <img class="img-fluid mw-100" src="assets/ft_wall.JPG"  alt="Forrest Trails" style='border-width: 0px;height: 150px;'>
-  </div>
-   <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
-   <!-- Page Contents -->
-  <div id="page-contents">
+</nav>
 
-  </div>
+        <!-- ^^^ NAVBAR ^^^ -->
+        <div id="page-contents">  </div><!-- Placeholder for the page contents -->
+        <!-- Username and password modal -->
+        <div class="modal fade " id="customModal" tabindex="-1" aria-labelledby="customModalLabel" aria-hidden="true">
+          <div class="modal-dialog text-dark">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="customModalLabel">Login</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form id="loginForm">
+                  <div class="mb-3">
+                    <label for="emailInput" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="Enter email" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="passwordInput" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="passwordInput" placeholder="Enter password" required>
+                  </div>
+                  <div id="loginError" class="text-danger" style="display:none;"></div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" id="loginBtn" class="btn btn-primary">Login</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
-      <!-- Footer Section -->
-    <footer class="footer">
-      <div class="footerContainer">
-        <p class="copyright-text">&copy; 2024 Scott Miller. All rights reserved.</p>
-      </div>
-    </footer>
 
+        <footer class="footer"> <!-- Footer Section -->
+          <div class="footerContainer">
+            <p class="copyright-text">&copy; 2024 Scott Miller. All rights reserved.</p>
+          </div>
+        </footer>
 
-  </body>
+    </body>
 </html>
 
